--- a/html/index.html
+++ b/html/index.html
@@ -4,5 +4,5 @@
 <body>
   <p id="yo"> yo yo yo yo yo yo yo </p>
   
-  <script></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 </body>
